--- a/src/App.css
+++ b/src/App.css
@@ -1,138 +1,3 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-.header {
-    padding: 20px;
-    border: 1px solid black;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.logo {
-    width: 61px;
-    height: 60px;
-    background-color: red;
-    border-radius: 50%;
-}
-
-.restarentCards {
-    display: flex;
-    flex-wrap: wrap;
-
-}
-
-.image {
-    width: 300px;
-    height: 200px;
-
-
-}
-
-.card {
-    width: 300px;
-    height: 400px;
-    border: 1px solid black;
-    overflow: hidden;
-    margin: 20px 15px;
-    border-radius: 20px;
-
-}
-
-.image_div {
-    width: 300px;
-    height: 400px;
-
-    display: flex;
-    justify-content: center;
-}
-
-.card_detalis {
-    text-align: center;
-    margin-top: 40px;
-}
-
-.top_reated {
-    padding: 15px;
-    margin: 5px;
-    background-color: blue;
-    color: aliceblue;
-}
-
-h1 {
-    text-align: center;
-}
-
-.shimmer-cards {
-    width: 300px;
-    height: 400px;
-    background-color: darkgrey;
-    margin: 20px 15px;
-    border-radius: 20px;
-
-}
-
-.shimmer-container {
-    display: flex;
-    flex-wrap: wrap;
-
-}
-
-.nav-links {
-    display: flex;
-
-}
-
-ul li {
-    list-style-type: none;
-    margin-right: 20px;
-    font-size: 20px;
-}
-
-li {
-
-    padding: 10px;
-    border-radius: 5px;
-    background-color: blue;
-    color: aliceblue;
-    font-weight: 800;
-}
-
-li:active {
-    background-color: aquamarine;
-}
-
-.login-button {
-    padding: 15px;
-    border: 1px solid black;
-    font-size: 15px;
-    font-weight: 800;
-}
-
-.search-input {
-    border-radius: 5px;
-    padding: 10px;
-    border: 1px solid black;
-    margin-right: 3px;
-}
-
-.search-button {
-    padding: 10px;
-    background-color: white;
-    font-weight: 600;
-    border-radius: 5px;
-}
-
-.top-container {
-    display: flex;
-    justify-content: space-between;
-    margin: 20px 15px;
-}
-
-.user-card {
-    padding: 10px;
-    border: 1px solid black;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
